@startuml
skinparam classAttributeIconSize 0

class Book{
    -int id
    -String author
    -String subject

    +int getId()
    +String getAuthor()
    +String getSubject()

    +void printBook()
}

class Borrower{
    -String name
    -List<int> booksBorrowed
    +List<int> getBorrowedBooks()
    +String getName()

}

class Library{

    'store last borrower of a book'
    -Map<int, String> LastCheckedOutBy 
    -Map<int, String> IsCheckedOutBy
    -Map<int, Book> books
    -Map<string, Borrower> borrowers
    -int idCounter

    

    +void checkoutBook(Book book)
    +void returnBook(Book book)

    +void addBook(Book book)
    +void removeBook(Book book)

    +List<Book> getBooksByAuthor(String author)
    +List<Book> getBooksBySubject(String subject)

    +List<Book> findBooksCheckedOutBy(Borrower borrower)

    +Borrower getLastBorrower(Book book)

}

Library [bookId] --> "0..*" Book : has
Library [borrowerName] --> "0..*" Borrower : has

Borrower [bookId] --> "0..*" Book : borrowed



@enduml